<resources>
    <string name="app_name">rad.io</string>
    <string name="play_button_text">Play</string>
    <string name="settings_text">Settings</string>
    <string name="game_settings_text">Game Settings</string>
    <string name="playlist_hint">What playlist do you want ?</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="playlist_selection_text">Playlist:</string>
    <string name="name_settings_text">Name:</string>
    <string name="nb_rounds_text">Number of rounds:</string>
    <string name="private_option_text">Private</string>
    <string name="start_button_text">Start</string>
    <string name="save_settings_button_text">Save settings</string>
    <string name="volume_text">Volume:</string>
    <string name="spotify_text">Spotify Status:</string>
    <string name="hint_option_text">With hints</string>
    <string name="game_name_hint">A Fun Party</string>
    <string name="default_game_name">A fun Party</string>
    <string name="default_game_nb_rounds">3</string>
    <string name="playlist_error_format">Playlist "%s" not found</string>
    <string name="uid_text_format">Party id: %03d</string>
    <string name="uid_loading_text_format">Party id: Loading</string>
    <string name="uid_error">Failed to create lobby</string>
    <string name="uid_error_join">Failed to join lobby.</string>
    <string name="host_name_format">Host: %s</string>
    <string name="game_name_format">Game: %s</string>
    <string name="playlist_format">Playlist: %s</string>
    <string name="number_of_rounds_format">Number of rounds: %d</string>
    <string name="hints_enabled_format">Hints enabled: %b</string>
    <string name="name_cannot_be_empty">Error : Song name cannot be empty !</string>
    <string name="playlist_is_empty">Error : Playlist does not contain any song !</string>
    <string name="playlist_has_no_name">Error : Playlist has no name !</string>
    <string name="private_format">Private : %b</string>
    <string name="playlist_card_text1">Playlist Name</string>
    <string name="playlist_card_text2">Playlist Genre</string>
    <string name="song_card_text1">Song Name</string>
    <string name="song_card_text2">Artist Name</string>
    <string name="playlist_name_placeholder">Playlist</string>
    <string name="song_name_placeholder">Song</string>
    <string name="artist_name_placeholder">Artist</string>
    <string name="long_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque convallis dignissim ipsum sit amet blandit. Maecenas a porta tellus, quis tincidunt sem. Nullam consequat pharetra lobortis. Pellentesque luctus, mi in bibendum viverra, felis erat feugiat magna, vel sagittis massa orci nec tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur in turpis quis lacus congue imperdiet. Mauris eget lobortis nisi. Sed quis nulla pellentesque, faucibus nisi sed, porta purus. Nulla mattis, sapien quis vehicula ultrices, odio nibh tristique sapien, et ultrices orci felis in est. Praesent ut dignissim metus. </string>
    <string name="launch_game">Launch</string>
    <string name="join_game_text">Type the ID of the game you want to join !</string>
    <string name="default_lobby_id">000</string>
    <string name="join_button_text">Join</string>
    <string name="join_fail_format">Failed to join lobby %d.</string>
    <string name="lobby_not_found">Lobby %d not found.</string>
    <string name="current_round_format">Current round: %d</string>
    <string name="singing_format">%s is singing!</string>
    <string name="guess_the_song">Guess the song!</string>
    <string name="open_game_error">Failed to open the game.</string>
    <string name="launch_game_error">Failed to launch the game.</string>
    <string name="add_a_playlist_manually">Add a playlist manually</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="create_playlist">CREATE PLAYLIST</string>
    <string name="update_playlist">UPDATE PLAYLIST</string>
    <string name="add_song">ADD SONG</string>
    <string name="lyricsPresenter">Lyrics :</string>
    <string name="pick_a_song">Pick a song!</string>
    <string name="submit">Submit</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="artistLyricsDisplay">Artist :</string>
    <string name="songLyricsDisplay">Song :</string>
    <string name="welcome_to_google_signin">Welcome to Google SignIn</string>
    <string name="your_spotify_playlists_are_loading">Your Spotify playlists are loading…!</string>
    <string name="this_could_take_some_time">This could take some time…!</string>
    <string name="you_have_successfully_logged_into_spotify">You have successfully logged into Spotify!</string>
    <string name="import_my_spotify_playlists">Import my Spotify playlists</string>
    <string name="deletePlaylist">Delete</string>
    <string name="editPlaylist">Edit</string>
    <string name="sign_in_message">Sign in</string>
    <string name="sign_out_message">Sign out</string>
    <string name="swipe_a_song_to_delete">Swipe a song to delete it.</string>
    <string name="wait_for_pick_format">Waiting on %s to pick a song</string>
    <string name="congrats">Congratulations!</string>
    <string name="micPermissionError">The microphone permissions could not be updated.</string>
    <string name="saveOnlineQuestionText">Do you want to save your playlist online?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="round_done">The time of the round expired</string>
    <string name="warningMessageQuitAddPlaylist">Are you sure you want to return to the main menu? All unsaved changes will be discarded.</string>
    <string name="validateMessageQuitAddPlaylist">Return to your profile</string>
    <string name="cancelMessageQuitAddPlaylist">Continue editing my playlist</string>
    <string name="warningMessageQuitGameOrLobby">Warning: by clicking on continue, you will be kicked from the lobby. If you are host this will end the game for all players.</string>
    <string name="validateMessageQuitGameOrLobby">Continue</string>
    <string name="cancelMessageQuitGameOrLobby">Cancel</string>
    <string name="button_to_close_popup_window">Button to close popup window</string>
    <string name="very_long_text_placeholder">A long, long time ago\nI can still remember how that music used to make me smile\nAnd I knew if I had my chance that I could make those people dance\nAnd maybe they\'d be happy for a while\nBut February made me shiver\nWith every paper I\'d deliver\nBad news on the doorstep\nI couldn\'t take one more step\nI can\'t remember if I cried\nWhen I read about his widowed bride\nBut something touched me deep inside\nThe day the music died\nSo bye-bye, Miss American Pie\nDrove my Chevy to the levee, but the levee was dry\nAnd them good old boys were drinkin\' whiskey and rye\nSingin\' \"This\'ll be the day that I die\nThis\'ll be the day that I die\"\nDid you write the book of love, and do you have faith in God above\nIf the Bible tells you so?\nNow do you believe in rock and roll, can music save your mortal soul\nAnd can you teach me how to dance real slow?\nWell, I know that you\'re in love with him\n\'Cause I saw you dancin\' in the gym\nYou both kicked off your shoes\nMan, I dig those rhythm and blues\nI was a lonely teenage broncin\' buck\nWith a pink carnation and a pickup truck\nBut I knew I was out of luck\nThe day the music died\nI started singin\' bye-bye, Miss American Pie\nDrove my Chevy to the levee, but the levee was dry\nThem good old boys were drinkin\' whiskey and rye\nAnd singin\' \"This\'ll be the day that I die\nThis\'ll be the day that I die\"\nNow for ten years we\'ve been on our own, and moss grows fat on a rollin\' stone\nBut that\'s not how it used to be\nWhen the jester sang for the king and queen in a coat he borrowed from James Dean\nAnd a voice that came from you and me\nOh, and while the king was looking down\nThe jester stole his thorny crown\nThe courtroom was adjourned\nNo verdict was returned\nAnd while Lenin read a book on Marx\nA quartet practiced in the park\nAnd we sang dirges in the dark\nThe day the music died\nWe were singin\' bye-bye, Miss American Pie\nDrove my Chevy to the levee, but the levee was dry\nThem good old boys were drinkin\' whiskey and rye\nSingin\' \"This\'ll be the day that I die\nThis\'ll be the day that I die\"\nHelter skelter in a summer swelter, the birds flew off with a fallout shelter\nEight miles high and falling fast\nIt landed foul on the grass, the players tried for a forward pass\nWith the jester on the sidelines in a cast\nNow the halftime air was sweet perfume\nWhile the sergeants played a marching tune\nWe all got up to dance\nOh, but we never got the chance\n\'Cause the players tried to take the field\nThe marching band refused to yield\nDo you recall what was revealed\nThe day the music died?\nWe started singin\' bye-bye, Miss American Pie\nDrove my Chevy to the levee, but the levee was dry\nThem good old boys were drinkin\' whiskey and rye\nAnd singin\' \"This\'ll be the day that I die\nThis\'ll be the day that I die\"\nOh, and there we were all in one place, a generation lost in space\nWith no time left to start again\nSo come on, Jack be nimble, Jack be quick, Jack Flash sat on a candlestick\n\'Cause fire is the devil\'s only friend\nOh, and as I watched him on the stage\nMy hands were clenched in fists of rage\nNo angel born in Hell\nCould break that Satan\'s spell\nAnd as the flames climbed high into the night\nTo light the sacrificial rite\nI saw Satan laughing with delight\nThe day the music died\nI started singin\' it\nSingin\' bye-bye, Miss American Pie\nDrove my Chevy to the levee, but the levee was dry\nThem good old boys were drinkin\' whiskey and rye\nAnd singin\' \"This\'ll be the day that I die\nThis\'ll be the day that I die\"\nI met a girl who sang the blues, and I asked her for some happy news\nBut she just smiled and turned away\nI went down to the sacred store where I\'d heard the music years before\nBut the man there said the music wouldn\'t play\nAnd in the streets, the children screamed\nThe lovers cried, and the poets dreamed\nBut not a word was spoken\nThe church bells all were broken\nAnd the three men I admire most\nThe Father, Son, and the Holy Ghost\nThey caught the last train for the coast\nThe day the music died\nAnd they were singin\' bye-bye, Miss American Pie\nDrove my Chevy to the levee, but the levee was dry\nAnd them good old boys were drinkin\' whiskey and rye\nSingin\' \"This\'ll be the day that I die\nThis\'ll be the day that I die\"\nThey were singin\' bye-bye, Miss American Pie\nDrove my Chevy to the levee, but the levee was dry\nThem good old boys were drinkin\' whiskey and rye\nAnd singin\' This\'ll be the day that I die\"</string>
    <string name="show_lyrics">Show Lyrics</string>
    <string name="select_language">Select Language:</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="MergeImportDismissPlaylistText">Do you want to merge, import or dismiss the playlist stored online?</string>
    <string name="mergePlaylist">Merge</string>
    <string name="importPlaylist">import</string>
    <string name="dismissOnlinePlaylist">dismiss online playlist</string>
    <string name="KeepPlaylistLocallyText">Do you want to keep the playlist associated to this account on your phone?</string>
    <string name="keepPlaylist">Keep playlist locally</string>
    <string name="dismissPlaylist">Delete playlist locally</string>
    <string name="mute_button_desc">Mute button</string>
    <string name="active_speaker_format">%s speaks</string>
    <string name="import_lyrics_button_text">Import lyrics</string>
    <string name="save_online">Save online</string>
    <string name="edit_playlist">Edit playlist</string>
</resources>