<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyActivity">

    <TextView
        android:id="@+id/uuidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uuid_text_format"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:stretchColumns="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uuidText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gameNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_name_format" />

            <TextView
                android:id="@+id/hostNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host_name_format" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/playlistText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_format" />

            <TextView
                android:id="@+id/nbRoundsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_rounds_format" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/withHintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hints_enabled_format" />

            <TextView
                android:id="@+id/privateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_format" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>