<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/warningQuitGameOrLobby"
        style="@style/Text.Popup"
        android:text="@string/warningMessageQuitGameOrLobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/quitOrStayLobbyLayout"
        style="@style/LinearLayoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warningQuitGameOrLobby">

        <Button
            android:id="@+id/validateQuitGameOrLobby"
            style="@style/GradientButton.Popup"
            android:layout_height="wrap_content"
            android:text="@string/validateMessageQuitGameOrLobby" />

        <Button
            android:id="@+id/cancelQuitGameOrLobby"
            style="@style/GradientButton.Popup"
            android:text="@string/cancelMessageQuitGameOrLobby" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>