<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topImage"
        style="@style/BackgroundTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImage"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLogo" />

    <ImageButton
        android:id="@+id/profileButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/profile_picture_description"
        android:scaleType="center"
        android:background="@drawable/ic_login"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/topImage"
        app:layout_constraintTop_toTopOf="@+id/topImage" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="64dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toSstartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainText">

        <Button
            android:id="@+id/playButton"
            style="@style/GradientButton.Large"
            android:text="@string/play_button_text" />

        <Button
            android:id="@+id/joinButton"
            style="@style/GradientButton.Large"
            android:text="@string/join_button_text" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/GradientButton.Large"
            android:text="@string/settings_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>