<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.GameActivity">

    <TextView
        android:id="@+id/currentRoundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_round_format"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/gameInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentRoundView">

        <TextView
            android:id="@+id/singerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singing_format"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/roundProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/hintTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:letterSpacing="0.13"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/songGuessEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/guess_the_song"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/songTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/errorOrFailureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/songGuessSubmitButton"
            style="@style/MainButtons"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/showLyricsButton"
            style="@style/MainButtons"
            android:layout_width="wrap_content"
            android:paddingHorizontal="32dp"
            android:visibility="gone"
            android:text="@string/show_lyrics" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/muteChannelButton"
        style="@style/FloatingButtons"
        android:src="@drawable/ic_unmute"
        app:layout_constraintBottom_toBottomOf="@+id/scoresRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/scoresRecyclerView"
        android:contentDescription="@string/mute_button_desc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scoresRecyclerView"
        style="@style/RecyclerViews"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoLayout" />


    <TextView
        android:id="@+id/activeSpeakerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/active_speaker_format"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>